# AndroidNativePlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bug/nativeplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/ffmpeg/libswresample/: swresample.h
app/src/main/java/com/bug/nativeplayer/: MainActivity.java  NativePlayer.java  NativeWindowPlayerActivity.java  OpenglPlayerActivity.java
app/src/main/res/layout/: activity_main.xml  activity_native_window_player.xml  activity_opengl_player.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bug/nativeplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
